WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15072
Fix ImageDecoder.cpp to not copy incoming data
https://bugs.webkit.org/show_bug.cgi?id=15072
Summary
Fix ImageDecoder.cpp to not copy incoming data
Brett Wilson (Google)
Reported
2007-08-24 13:33:21 PDT
ImageDecoder.cpp (not used by Mac, but used by various other ports) makes a copy of the incoming data and puts it into a Vector. This is unnecessary since the data is originally in a SharedBuffer that is designed not to be copied.
Attachments
Patch
(9.53 KB, patch)
2007-08-24 14:23 PDT
,
Brett Wilson (Google)
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brett Wilson (Google)
Comment 1
2007-08-24 14:23:24 PDT
Created
attachment 16110
[details]
Patch This patch changes ImageDecoder.setData to take a SharedBuffer*, and I updated the other Cairo image decoders. This also fixes two compiler warnings (unused variable and a for loop type mismatch).
Maciej Stachowiak
Comment 2
2007-09-04 11:38:38 PDT
Comment on
attachment 16110
[details]
Patch r=me
Mark Rowe (bdash)
Comment 3
2007-09-04 23:17:36 PDT
Landed in
r25368
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug