2007-09-04  Marvin Decker  <marv.decker@gmail.com>

Reviewed by Maciej Stachowiak.

        http://bugs.webkit.org/show_bug.cgi?id=15072
        Bug 15072: Fix ImageDecoder.cpp to not copy incoming data

        Change ImageDecoder::setData to take a SharedBuffer*.

        * platform/graphics/cairo/ImageSourceCairo.cpp:
        (WebCore::ImageSource::setData):
        * platform/image-decoders/ImageDecoder.h:
        (WebCore::RGBA32Buffer::bytes):
        (WebCore::RGBA32Buffer::height):
        (WebCore::ImageDecoder::setData):
        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::setData):
        (WebCore::GIFImageDecoder::frameCount):
        (WebCore::GIFImageDecoder::decode):
        (WebCore::GIFImageDecoder::decodingHalted):
        (WebCore::GIFImageDecoder::initFrameBuffer):
        * platform/image-decoders/gif/GIFImageDecoder.h:
        * platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
        (WebCore::JPEGImageDecoder::setData):
        (WebCore::JPEGImageDecoder::decode):
        * platform/image-decoders/jpeg/JPEGImageDecoder.h:
        * platform/image-decoders/png/PNGImageDecoder.cpp:
        (WebCore::PNGImageDecoder::setData):
        (WebCore::PNGImageDecoder::decode):
        (WebCore::PNGImageDecoder::headerAvailable):
        (WebCore::PNGImageDecoder::rowAvailable):
        * platform/image-decoders/png/PNGImageDecoder.h:


Canonical link: https://commits.webkit.org/19850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25368 268f45cc-cd09-0410-ab3c-d52691b4dbfc