third_party/WebKit/WebCore/platform/image-decoders/jpeg/JPEGImageDecoder.h
@@ -41,7 +41,7 @@ public:
     ~JPEGImageDecoder();
 
     // Take the data and store it.
-    virtual void setData(const Vector<char>& data, bool allDataReceived);
+    virtual void setData(SharedBuffer* data, bool allDataReceived);
 
     // Whether or not the size information has been decoded yet.
     virtual bool isSizeAvailable() const;
